// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Button Large 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Primary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Secondary 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Button Small 1`] = `
<button
  className="storybook-button storybook-button--small storybook-button--secondary"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Storyshots Example/Header Logged In 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log out
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Header Logged Out 1`] = `
<header>
  <div
    className="wrapper"
  >
    <div>
      <svg
        height="32"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
            fill="#FFF"
          />
          <path
            d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
            fill="#555AB9"
          />
          <path
            d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
            fill="#91BAF8"
          />
        </g>
      </svg>
      <h1>
        Acme
      </h1>
    </div>
    <div>
      <button
        className="storybook-button storybook-button--small storybook-button--secondary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Log in
      </button>
      <button
        className="storybook-button storybook-button--small storybook-button--primary"
        style={
          Object {
            "backgroundColor": undefined,
          }
        }
        type="button"
      >
        Sign up
      </button>
    </div>
  </div>
</header>
`;

exports[`Storyshots Example/Page Logged In 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log out
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots Example/Page Logged Out 1`] = `
<article>
  <header>
    <div
      className="wrapper"
    >
      <div>
        <svg
          height="32"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M10 0h12a10 10 0 0110 10v12a10 10 0 01-10 10H10A10 10 0 010 22V10A10 10 0 0110 0z"
              fill="#FFF"
            />
            <path
              d="M5.3 10.6l10.4 6v11.1l-10.4-6v-11zm11.4-6.2l9.7 5.5-9.7 5.6V4.4z"
              fill="#555AB9"
            />
            <path
              d="M27.2 10.6v11.2l-10.5 6V16.5l10.5-6zM15.7 4.4v11L6 10l9.7-5.5z"
              fill="#91BAF8"
            />
          </g>
        </svg>
        <h1>
          Acme
        </h1>
      </div>
      <div>
        <button
          className="storybook-button storybook-button--small storybook-button--secondary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Log in
        </button>
        <button
          className="storybook-button storybook-button--small storybook-button--primary"
          style={
            Object {
              "backgroundColor": undefined,
            }
          }
          type="button"
        >
          Sign up
        </button>
      </div>
    </div>
  </header>
  <section>
    <h2>
      Pages in Storybook
    </h2>
    <p>
      We recommend building UIs with a
       
      <a
        href="https://componentdriven.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        <strong>
          component-driven
        </strong>
      </a>
       
      process starting with atomic components and ending with pages.
    </p>
    <p>
      Render pages with mock data. This makes it easy to build and review page states without needing to navigate to them in your app. Here are some handy patterns for managing page data in Storybook:
    </p>
    <ul>
      <li>
        Use a higher-level connected component. Storybook helps you compose such data from the args of child component stories
      </li>
      <li>
        Assemble data in the page component from your services. You can mock these services out using Storybook.
      </li>
    </ul>
    <p>
      Get a guided tutorial on component-driven development at
       
      <a
        href="https://storybook.js.org/tutorials/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Storybook tutorials
      </a>
      . Read more in the
       
      <a
        href="https://storybook.js.org/docs"
        rel="noopener noreferrer"
        target="_blank"
      >
        docs
      </a>
      .
    </p>
    <div
      className="tip-wrapper"
    >
      <span
        className="tip"
      >
        Tip
      </span>
       Adjust the width of the canvas with the
       
      <svg
        height="10"
        viewBox="0 0 12 12"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M1.5 5.2h4.8c.3 0 .5.2.5.4v5.1c-.1.2-.3.3-.4.3H1.4a.5.5 0 01-.5-.4V5.7c0-.3.2-.5.5-.5zm0-2.1h6.9c.3 0 .5.2.5.4v7a.5.5 0 01-1 0V4H1.5a.5.5 0 010-1zm0-2.1h9c.3 0 .5.2.5.4v9.1a.5.5 0 01-1 0V2H1.5a.5.5 0 010-1zm4.3 5.2H2V10h3.8V6.2z"
            fill="#999"
            id="a"
          />
        </g>
      </svg>
      Viewports addon in the toolbar
    </div>
  </section>
</article>
`;

exports[`Storyshots TMS/Buttons Search Button 1`] = `
<button
  className="sc-bdfBQB jVxHia"
  onClick={[Function]}
  type="button"
>
  Искать
</button>
`;

exports[`Storyshots TMS/Buttons Test Button 1`] = `
<button
  className="sc-bdfBQB hozEIt"
  onClick={[Function]}
  type="button"
>
  Test Button
</button>
`;

exports[`Storyshots TMS/Filters Closed Filter 1`] = `
<div
  className="sc-dlfnuX hgmGuC"
>
  <div
    className="sc-hKgJUU ckbfuj"
  >
    Все курсы
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Closed Selected Filter 1`] = `
<div
  className="sc-dlfnuX hgmGuC"
>
  <div
    className="sc-hKgJUU ckbfuj"
  >
    меньше 18, больше 45
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Filter 1`] = `
<div
  className="sc-dlfnuX bsSlmZ"
>
  <div
    className="sc-hKgJUU ipsYxC"
  >
    Все курсы
  </div>
  <div
    className="sc-eCstlR cVhlwp"
  >
    <button
      className="sc-jSgvzq dKSMnw"
    >
      Отменить все
    </button>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="Front end"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="Front end"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      Front end
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="Java"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="Java"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      Java
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="Python"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="Python"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      Python
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="iOS"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="iOS"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      iOS
    </label>
  </div>
</div>
`;

exports[`Storyshots TMS/Filters Opened Selected Filter 1`] = `
<div
  className="sc-dlfnuX bsSlmZ"
>
  <div
    className="sc-hKgJUU ipsYxC"
  >
    меньше 18, больше 45
  </div>
  <div
    className="sc-eCstlR cVhlwp"
  >
    <button
      className="sc-jSgvzq dKSMnw"
    >
      Выбрать все
    </button>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="меньше 18"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="меньше 18"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      меньше 18
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="18-30"
    >
      <input
        checked={false}
        className="sc-iBPTik gHmOYf"
        id="18-30"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      18-30
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="30-45"
    >
      <input
        checked={false}
        className="sc-iBPTik gHmOYf"
        id="30-45"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      30-45
    </label>
    <label
      className="sc-gKseQn kOGeHp"
      htmlFor="больше 45"
    >
      <input
        checked={true}
        className="sc-iBPTik gHmOYf"
        id="больше 45"
        type="checkbox"
      />
      <div
        className="sc-gsTEea hHzpmx"
      />
      больше 45
    </label>
  </div>
</div>
`;

exports[`Storyshots TMS/Inputs Default Input 1`] = `
<label
  className="sc-pGacB gCimLT"
>
  <label
    className="sc-jrAFXE eoUgPz"
  >
    E-mail
  </label>
  <input
    className="sc-fubCzh bgyEaE"
    placeholder="Введите e-mail"
    type="text"
  />
</label>
`;

exports[`Storyshots TMS/Inputs Invalid Input 1`] = `
<label
  className="sc-pGacB gCimLT"
>
  <label
    className="sc-jrAFXE fxaQng"
  >
    Некорректный e-mail
  </label>
  <input
    className="sc-fubCzh feplth"
    type="email"
    value="ivan@teachmeskills.com"
  />
</label>
`;

exports[`Storyshots TMS/StudentImages Image In Circle 1`] = `
<div
  className="sc-kEjbQP jJVmZr sc-crrszt rbdER"
/>
`;

exports[`Storyshots TMS/StudentImages Image On Card 1`] = `
<div
  className="sc-kEjbQP jJVmZr"
/>
`;

exports[`Storyshots TMS/StudentImages No Image In Circle 1`] = `
<div
  className="sc-kEjbQP eoiRsw sc-crrszt wWCLo"
>
  <p
    className="sc-iqHYmW kSxkVi"
  >
    ЗФ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentImages No Image On Card 1`] = `
<div
  className="sc-kEjbQP eoiRsw"
>
  <p
    className="sc-iqHYmW kSxkVi"
  >
    ИИ
  </p>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card 1`] = `
<div
  className="sc-kstqJO juLKqm"
>
  <div
    className="sc-kEjbQP eoiRsw"
  >
    <p
      className="sc-iqHYmW kSxkVi"
    >
      ИИ
    </p>
  </div>
  <div
    className="sc-fodVek liMPRU"
  >
    <h3
      className="sc-bkzYnD AjRbs"
    >
      Иван
       
      Иванов
    </h3>
    <p
      className="sc-idOiZg ldJLKK"
    >
      Java Developer
    </p>
    <div
      className="sc-dIUeWJ lazwsm"
    >
      <div
        className="sc-dQoVA bBugxC"
      >
        Front End
      </div>
      <div
        className="sc-dQoVA fKDeJa"
      >
        Лучший ученик
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/StudentPreviewCard Student Card Active 1`] = `
<div
  className="sc-kstqJO eorXqF"
>
  <div
    className="sc-kEjbQP jJVmZr"
  />
  <div
    className="sc-fodVek liMPRU"
  >
    <h3
      className="sc-bkzYnD AjRbs"
    >
      Роман
       
      Шашков
    </h3>
    <p
      className="sc-idOiZg ldJLKK"
    >
      Python Developer
      , 25 лет
    </p>
    <div
      className="sc-dIUeWJ lazwsm"
    >
      <div
        className="sc-dQoVA bBugxC"
      >
        Back End
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TMS/Tags Course Tag 1`] = `
<div
  className="sc-bqyKOL fqrTTy"
>
  Front End
</div>
`;

exports[`Storyshots TMS/Tags Small Best Student Tag 1`] = `
<div
  className="sc-dQoVA fKDeJa"
>
  Лучший ученик
</div>
`;

exports[`Storyshots TMS/Tags Small Course Tag 1`] = `
<div
  className="sc-dQoVA bBugxC"
>
  Front End
</div>
`;

exports[`Storyshots Welcome Test Component Example 1`] = `
Array [
  <div>
    helloworld from storybook
  </div>,
  <button
    className="sc-hHfuMS cDrpXg"
  >
    Styled Button
  </button>,
]
`;

exports[`Storyshots Welcome Test Component Example Default 1`] = `
Array [
  <div>
    helloworld
  </div>,
  <button
    className="sc-hHfuMS cDrpXg"
  >
    Styled Button
  </button>,
]
`;
